<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BLEembedded flasher</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="label_device_address">Device address:</string>

    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    
        <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_refresh">Refresh</string>
    
    
    <!-- New BLEres Activity-->
    <string name="device_name">Device name: </string>
    <string name="resource_name_cannot_be_left_blank">resource name cannot be left blank </string>

    <!--Device Control-->
    <string name="label_state">State:</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="Store_the_attribute_in_description_file">Store the attribute in description file</string>
    <!--Device Control Alert Dialog-->
    <string name="Enter_a_specific_name_for_the_selected_Device">Enter a specific name for the selected Device</string>
    <string name="Device_name">Device name</string>
    <string name="Ok">Ok</string>
    <string name="Cancel">Cancel</string>
    <string name="device_attributes_stored">device attributes stored</string>

    <!--View resources stored-->
    <string name="Item_type">Item type</string>
    <string name="Item_cardinality">Item cardinality</string>
    <string name="Device_type">Device type</string>
    <string name="Device_version">Device version</string>
    <string name="Device_mac_address">Device mac address</string>
    <string name="stored_resources">Stored resources</string>
    <string name="delete_all_the_stored_resources">Delete all the stored resources</string>
    <string name="no_resources_found">No resources found</string>
    <string name="alert_delete_resource_title">Delete all resources</string>
    <string name="confirmation">Are you sure to delete all stored resources?</string>
    <string name="services_not_found_yet">service not found yet</string>

    <!--Exception messages-->
    <string name="flic_app_not_installed">Flic app is not installed. Flic devices won\'t work until Flic app installation. Please install the app "io.flic.app" from Google Play Store.</string>


</resources>