<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"

    android:paddingStart="?android:attr/expandableListPreferredItemPaddingLeft"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <TextView android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dip"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:textAlignment="viewStart"
        android:text="@string/Item_type"
        />

    <TextView android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@android:id/text1"
        android:layout_alignStart="@android:id/text1"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textAlignment="viewStart"
        />

    <TextView android:id="@+id/text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@android:id/text2"
        android:layout_alignStart="@android:id/text2"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:textAlignment="viewStart"
        android:text="@string/Item_cardinality"
        />

    <TextView android:id="@+id/text4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text3"
        android:layout_alignStart="@id/text3"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textAlignment="viewStart"
        />

    <TextView android:id="@+id/text5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text2"
        android:layout_alignStart="@id/text2"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:textAlignment="viewStart"
        android:text="@string/Device_name"
        />

    <TextView android:id="@+id/text6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text5"
        android:layout_alignStart="@id/text5"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textAlignment="viewStart"
        />

    <TextView android:id="@+id/text7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text6"
        android:layout_alignStart="@id/text6"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:textAlignment="viewStart"
        android:text="@string/Device_type"
        />

    <TextView android:id="@+id/text8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text7"
        android:layout_alignStart="@id/text7"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textAlignment="viewStart"
        />

    <TextView android:id="@+id/text9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text8"
        android:layout_alignStart="@id/text8"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:textAlignment="viewStart"
        android:text="@string/Device_version"
        />

    <TextView android:id="@+id/text10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text9"
        android:layout_alignStart="@id/text9"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textAlignment="viewStart"
        />

    <TextView android:id="@+id/text11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text10"
        android:layout_alignStart="@id/text10"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:textAlignment="viewStart"
        android:text="@string/Device_mac_address"
        />

    <TextView android:id="@+id/text12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text11"
        android:layout_alignStart="@id/text11"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textAlignment="viewStart"
        />
</LinearLayout>